<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roomies</string>
    <string name="welcome">Hello roomie!</string>
    <string name="login">Login</string>
    <string name="actionSettings">Settings</string>
    <string name="mail">E-mail</string>
    <string name="mailColon">E-mail:</string>
    <string name="name">Name</string>
    <string name="nameColon">Name:</string>
    <string name="surnameColon">Surname:</string>
    <string name="genderColon">Gender:</string>
    <string name="actionAccount">My account</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="drawerOpened">Slide menu opened</string>
    <string name="drawerClosed">Slide menu closed</string>
    <string name="title_activity_my_account">My account</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_groups">Groups</string>
    <string name="no_groups">You have no groups.</string>
    <string name="group_create">Create group</string>
    <string name="group_join">Join group</string>
    <string name="addressColon">Address:</string>
    <string name="address">Address</string>
    <string name="adminColon">Admin:</string>
    <string name="title_activity_join_group">Join group</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_group">Create group</string>
    <string name="emptyFieldMessage">This field can\'t be empty</string>
    <string name="leave_group">Leave group</string>
    <string name="edit_group">Edit group</string>
    <string name="delete_group">Delete group</string>
    <string name="save">Save</string>
    <string name="title_activity_edit_group">Edit group</string>
    <string name="admin">Admin</string>
    <string name="title_activity_budget">Budget</string>
    <string name="current_balance">Current balance:</string>
    <string name="delete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_payment">Add payment</string>
    <string name="title_activity_add_payment">Add payment</string>
    <string name="description">Description</string>
    <string name="amount">Amount(zł)</string>
    <string name="amount_min_value_message">Amount must be positive</string>
    <string name="amount_max_value_message">Amount must be smaller than 100000</string>
    <string name="amount_bad_format_message">Bad amount format</string>
    <string name="amount_hint">0.00</string>
    <string name="emptyListMessage">You have to check at least one element from list</string>
    <string name="cyclic_event">Cyclic event</string>
    <string name="once_event">One-time event</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="switch_executor">Switch executor</string>
    <string name="add_reminder">Add reminder</string>
    <string name="before">before</string>
    <string name="with_punishment">With punishment and confirmation</string>
    <string name="with_confirmation">With confirmation</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_add_event">Add event</string>
    <string name="change">Change</string>
    <string name="repeat_after">Repeat after </string>
    <string name="date_today_or_future_message">Date should be today or future</string>
    <string name="min_interval_value_message">This number should be 0 or greater</string>
    <string name="max_interval_value_message">This number should be less than 1000</string>
    <string name="current_tasks">Current tasks</string>
    <string name="next_tasks">Next tasks</string>
    <string name="group_tasks">Your task groups</string>
    <string name="done">Done</string>
    <string name="show_all_tasks">Show all tasks</string>
    <string name="title_activity_all_tasks">All tasks</string>
    <string name="confirmations">Confirmations</string>
    <string name="announcements">Announcements</string>
    <string name="undone">Not done</string>
    <string name="time_for_objections">Time for objections(hours)</string>
    <string name="title_activity_announcements">Announcements</string>
    <string name="title_activity_add_announcement">Add announcement</string>
    <string name="anonymous">Anonymous</string>

</resources>
