<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_event_scroll_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/add_event_type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/add_event_once_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/once_event" />

                <RadioButton
                    android:id="@+id/add_event_cyclic_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="false"
                    android:text="@string/cyclic_event" />

            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/add_event_name"
                android:hint="@string/name"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/add_event_type_radio_group"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/add_event_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/add_event_name"
                android:layout_alignLeft="@+id/add_event_end_date"
                android:layout_alignStart="@+id/add_event_end_date" />

            <TextView
                android:id="@+id/add_event_start_date_label"
                android:text="@string/start_date"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/add_event_start_date"
                android:layout_toLeftOf="@id/add_event_start_date"
                android:layout_alignTop="@+id/add_event_start_date"
                android:layout_alignRight="@+id/add_event_end_date_label"
                android:layout_alignEnd="@+id/add_event_end_date_label" />

            <TextView
                android:id="@+id/add_event_end_date_label"
                android:text="@string/end_date"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/add_event_end_date"
                android:layout_toLeftOf="@id/add_event_end_date"
                android:layout_toStartOf="@id/add_event_end_date" />

            <EditText
                android:id="@+id/add_event_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:layout_below="@+id/add_event_start_date"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"/>

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_event_interval_number"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/add_event_end_date"
                android:layout_centerHorizontal="true"
                android:inputType="number"
                android:ems="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_event_interval_label"
                android:layout_alignBottom="@+id/add_event_interval_number"
                android:layout_toLeftOf="@+id/add_event_interval_number"
                android:layout_toStartOf="@+id/add_event_interval_number"
                android:text="@string/repeat_after"
                android:textSize="16sp"/>

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_event_interval_spinner"
                android:layout_alignBottom="@+id/add_event_interval_number"
                android:layout_toRightOf="@+id/add_event_interval_number"
                android:layout_toEndOf="@+id/add_event_interval_number" />

            <CheckBox
                android:id="@+id/add_event_switch_executor_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_event_interval_number"
                android:layout_centerHorizontal="true"
                android:checked="false"
                android:layout_marginTop="20dp"
                android:text="@string/switch_executor" />

            <CheckBox
                android:id="@+id/add_event_punishment_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_event_switch_executor_check_box"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/with_punishment" />

            <Spinner
                android:id="@+id/add_event_punishment_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_event_punishment_check_box"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/add_event_punishment_amount"
                android:hint="@string/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/add_event_punishment_spinner"
                android:layout_centerHorizontal="true"
                android:inputType="numberDecimal"
                android:ems="10" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/time_for_objections"
                android:id="@+id/add_event_confirmation_number"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/add_event_punishment_amount"
                android:layout_centerHorizontal="true"
                android:inputType="number"
                android:ems="10" />

            <ListView
                android:id="@+id/add_event_members_list"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_below="@+id/add_event_confirmation_number"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:choiceMode="multipleChoice"
                android:fadeScrollbars="false"
                android:scrollbars="vertical" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>