<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.kedziora.emilek.roomies.app.activity.EditGroupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/group_edit_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/group_edit_address_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/group_edit_name_edit"
                android:layout_marginTop="10dp"
                android:hint="@string/address" />

            <ListView
                android:id="@+id/group_edit_users_list"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_below="@+id/group_edit_address_edit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:choiceMode="multipleChoice"
                android:fadeScrollbars="false"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/group_edit_admin_spinner_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/group_edit_users_list"
                android:layout_marginTop="10dp"
                android:text="@string/admin" />

            <Spinner
                android:id="@+id/group_edit_admin_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/group_edit_admin_spinner_label"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/group_edit_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group_edit_admin_spinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/save" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
