<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/events_show_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/events_current_tasks_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/events_show_all_button"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/current_tasks"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/events_current_tasks_list"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_below="@id/events_current_tasks_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:choiceMode="singleChoice"
                android:fadeScrollbars="false" />

            <TextView
                android:id="@+id/events_next_tasks_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/events_current_tasks_list"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/next_tasks"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/events_next_tasks_list"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_below="@id/events_next_tasks_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:choiceMode="singleChoice"
                android:fadeScrollbars="false" />

            <TextView
                android:id="@+id/events_group_tasks_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/events_next_tasks_list"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/group_tasks"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/events_group_tasks_list"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_below="@id/events_group_tasks_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:choiceMode="singleChoice"
                android:fadeScrollbars="false" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
